[gd_scene load_steps=5 format=3 uid="uid://batc3rb0yxb13"]

[ext_resource type="Script" path="res://Scripts/LetterTile.gd" id="1_vdqk0"]
[ext_resource type="Texture2D" uid="uid://dv1fk3kifs8oc" path="res://Assets/TileBack.png" id="1_vrhfx"]
[ext_resource type="Texture2D" uid="uid://byovltxannfvd" path="res://Assets/PowerTile.png" id="2_4imkl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pljf"]
size = Vector2(112, 111)

[node name="LetterTile" type="Node2D"]
script = ExtResource("1_vdqk0")
power_tile_back = ExtResource("2_4imkl")

[node name="TileBack" type="Sprite2D" parent="."]
position = Vector2(56, 56)
scale = Vector2(0.222, 0.222)
texture = ExtResource("1_vrhfx")

[node name="LetterLabel" type="Label" parent="."]
offset_left = 4.0
offset_top = 21.0
offset_right = 79.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Z"
horizontal_alignment = 1

[node name="LetterScoreLabel" type="Label" parent="."]
offset_left = 56.0
offset_top = 5.0
offset_right = 96.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "5"
horizontal_alignment = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(56, 55.5)
shape = SubResource("RectangleShape2D_4pljf")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
